Finish spell popup TODO: fix popup's arrow overflow hidden

--- a/src/components/hero-components/popup/hero-spell/hero-spell.css
+++ b/src/components/hero-components/popup/hero-spell/hero-spell.css
@@ -20,10 +20,15 @@
     line-height: 50px;
 }
 
-.popup_spell_target_label {
+.color_dark_white {
     color: rgb(149, 165, 166);
 }
 
 .font-weight-500 {
     font-weight: 500;
+}
+
+.text_medium {
+    font-size: 90%;
+    font-weight: 400;
 }
